profilelist1exp/unpackaged/objects/EMC_MyQuotes_URL_ParamNames__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This Custom setting used to set MyQuotes URL query parameter names</description>
    <fields>
        <fullName>account__c</fullName>
        <label>account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>distributionChannel__c</fullName>
        <label>distributionChannel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oemPartner__c</fullName>
        <label>oemPartner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunityNumber__c</fullName>
        <label>opportunityNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryAlliancePartner__c</fullName>
        <label>primaryAlliancePartner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quoteName__c</fullName>
        <label>quoteName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quoteSource__c</fullName>
        <label>quoteSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>secondaryAlliancePartner__c</fullName>
        <label>secondaryAlliancePartner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>servicePartner__c</fullName>
        <label>servicePartner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tier1__c</fullName>
        <label>tier1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tier2__c</fullName>
        <label>tier2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EMC MyQuotes URL ParamNames</label>
</CustomObject>